General clean up. Exercise 2.63